<resources>
    <string name="app_name">login test</string>
    <string name="app_title">winner winner chicken dinner</string>

    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>
    <string name="login_page">Login page</string>
</resources>